--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -22,6 +22,8 @@ jobs:
       fail-fast: false
       matrix:
         ruby:
+          # 3.0 is the last version with no `URI.register_scheme` method
+          - "3.0"
           - "3.4"
           - "jruby"
           - "truffleruby"
